src/system/modules/!composer/assets/css/backend.css
h2.sub_headline small {
	font-size: 80%;
	color: #999;
}

/**
 * Stability colors
 */
span.stability-stable {
	color: #006400;
}
span.stability-rc {
	color: #add8e6;
}
span.stability-beta {
	color: orange;
}
span.stability-alpha {
	color: red;
}
span.stability-dev {
	color: #dc143c;
}

/**
 * Installation actions
 */
.installation-candidate {
	color: gray;
}
.to-be-removed {
	color: #900;
}

/**
 * Some generic styles
 */
#tl_buttons a {
	margin-left: 15px;
}
#tl_buttons img {
	vertical-align: middle;
}
.output {
	font-family: monospace;
	margin: 24px 18px;
	padding: 6px 8px;
	white-space: pre-line;
	background-color: #111;
	color: #fff;
	max-height: 20em;
	overflow: auto;
}

/**
 * Migration wizard
 */
.tl_composer_migrate h2 {
	padding-top: 0.83em;
	border-top: 1px solid #ddd;
	color: #8ab858;
	font-size: 14px;
}
.tl_composer_migrate p,
.tl_composer_migrate li {
	line-height: 1.5em;
}
.tl_composer_migrate .preconditions li.fail {
	color: #990000;
	background-image: url(../images/fail.png);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 16px;
}
.tl_composer_migrate .preconditions li.warn {
	color: #999900;
	background-image: url(../images/warn.png);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 16px;
}
.tl_composer_migrate .preconditions li.pass {
	color: #009900;
	background-image: url(../images/pass.png);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 16px;
}
.tl_composer_migrate .questions {
	margin-bottom: 2em;
}
.tl_composer_migrate label {
	display: block;
	border: 1px solid #ccc;
	border-radius: 5px;
	padding: 1em;
	margin: 1em 0;
}
.tl_composer_migrate label span.input {
	float: left;
}
.tl_composer_migrate label span.text {
	display: block;
	margin-left: 3em;
}
.tl_composer_migrate .mode_upgrade {
	border-color: #006400;
}
.tl_composer_migrate .mode_upgrade strong {
	color: #006400;
}
.tl_composer_migrate .mode_upgrade.checked {
	background-color: #CDFFCD;
}
.tl_composer_migrate .mode_clean {
	border-color: #FFB269;
}
.tl_composer_migrate .mode_clean strong {
	color: #FFB269;
}
.tl_composer_migrate .mode_clean.checked {
	background-color: #FFE6CD;
}
.tl_composer_migrate .mode_none {
	border-color: #990000;
}
.tl_composer_migrate .mode_none strong {
	color: #990000;
}
.tl_composer_migrate .mode_none.checked {
	background-color: #FFCDCD;
}

.tl_composer_migrate .setup_production {
	border-color: #006400;
}
.tl_composer_migrate .setup_production strong {
	color: #006400;
}
.tl_composer_migrate .setup_production.checked {
	background-color: #CDFFCD;
}
.tl_composer_migrate .setup_development {
	border-color: #002878;
}
.tl_composer_migrate .setup_development strong {
	color: #002878;
}
.tl_composer_migrate .setup_development.checked {
	background-color: #CDDEFF;
}

/**
 * Undo migration
 */
.tl_composer_migrate_undo ul {
	list-style: disc;
	margin-left: 1em;
	padding-left: 1em;
}
.tl_composer_migrate_undo li {
	list-style: disc;
	line-height: 1.5em;
}

/**
 * Listing view
 */
.col_action {
	text-align: right;
}
.col_action input,
.col_action select {
	vertical-align: middle;
}
.col_type .label {
	display: inline-block;
	padding: 3px 3px 1px;
	border-radius: 3px;
	background-color: #333;
	color: #fff;
	font-family: monospace;
	font-size: 10px;
}
.col_collapse {
	width: 16px;
}
.col_name {
	padding: 4px 0;
	white-space: nowrap;
}
.col_name .toggler {
	cursor: pointer;
}
.col_name .name {
	color: maroon;
}
.col_name .description p {
	color: #666;
	margin-top: 12px;
}
.col_name .replace {
	display: block;
	color: #aaa;
}
.col_name .replace:before {
	display: inline-block;
	content: "\2936";
	margin-left: .25em;
	margin-right: .25em;
	-webkit-transform:rotate(90deg);
	-moz-transform:rotate(90deg);
	-ms-transform:rotate(90deg);
	-o-transform:rotate(90deg);
	transform:rotate(90deg);
}
p.dependencies {
	padding: 2px 6px 3px;
}
p.dependencies input {
	vertical-align: middle;
}
span.dependency-indent {
	position: relative;
	display: inline-block;
	width: 18px;
	height: 16px;
	vertical-align: middle;
}
span.dependency-indent.child span.horizontal {
	position: absolute;
	top: 50%;
	left: 50%;
	margin-top: -1px;
	width: 50%;
	height: 2px;
	background-color: #ccc;
}
span.dependency-indent span.vertical {
	position: absolute;
	top: -6px;
	left: 50%;
	margin-left: -1px;
	width: 2px;
	height: 28px;
	background-color: #ccc;
}
span.dependency-indent.last span.vertical {
	display: none;
}
span.dependency-indent.child.last span.vertical {
	display: inline;
	height: 14px;
}

/**
 * Search result view
 */
#tl_composer_search .col_name .name,
#tl_composer_search .col_name .name a {
	color: maroon;
	margin-top: 6px;
	margin-bottom: 4px;
	font-size: 14px;
}
#tl_composer_search .col_name .description p {
	margin-top: 0;
	margin-bottom: 6px;
}

/**
 * Details view
 */
.composer_package_type_contao_module {
	background: -moz-linear-gradient(top,  #FFB269 0%, #ffffff 128px);
	background: -webkit-linear-gradient(top,  #FFB269 0%,#ffffff 128px);
	background: -o-linear-gradient(top,  #FFB269 0%,#ffffff 128px);
	background: -ms-linear-gradient(top,  #FFB269 0%,#ffffff 128px);
	background: linear-gradient(to bottom,  #FFB269 0%,#ffffff 128px);
}
.composer_package_type_library {
	background: -moz-linear-gradient(top,  #9BD1FF 0%, #ffffff 128px);
	background: -webkit-linear-gradient(top,  #9BD1FF 0%,#ffffff 128px);
	background: -o-linear-gradient(top,  #9BD1FF 0%,#ffffff 128px);
	background: -ms-linear-gradient(top,  #9BD1FF 0%,#ffffff 128px);
	background: linear-gradient(to bottom,  #9BD1FF 0%,#ffffff 128px);
}
#ctrl_composer_name {
	font-size: 22px;
	height: 30px;
	line-height: 30px;
	margin: 30px 0 0;
}
#ctrl_composer_name .name {
	margin-right: 12px;
}
#tl_composer_install .type {
	float: right;
	font-size: 22px;
	font-weight: bold;
	color: #ffffff;
	margin-top: -70px;
}
#tl_composer_install .keywords {
	font-size: 10px;
	line-height: 10px;
	margin-top: 6px;
}
#tl_composer_install .keywords .keyword {
	display: inline-block;
	background-color: #666;
	color: white;
	padding: 6px;
	-moz-border-radius: 6px;
	-webkit-border-radius: 6px;
	-o-border-radius: 6px;
	-ms-border-radius: 6px;
	border-radius: 6px;
}
#ctrl_composer_details {
	margin: 12px 0;
}
#ctrl_composer_details table th,
#ctrl_composer_details table td {
	padding: 4px 6px 4px 0;
}
#ctrl_composer_versions .release {
	border: 1px solid #ccc;
	margin: 12px 0;
	padding: 12px;
	-moz-border-radius: 6px;
	-webkit-border-radius: 6px;
	-o-border-radius: 6px;
	-ms-border-radius: 6px;
	border-radius: 6px;
	background-color: #f9f9f9;
	-moz-box-shadow: 0 0 5px rgba(0,0,0,.25);
	-webkit-box-shadow: 0 0 5px rgba(0,0,0,.25);
	-o-box-shadow: 0 0 5px rgba(0,0,0,.25);
	-ms-box-shadow: 0 0 5px rgba(0,0,0,.25);
	box-shadow: 0 0 5px rgba(0,0,0,.25);
}
#ctrl_composer_versions .release.stability-stable {
	background-image: -moz-linear-gradient(top, rgba(0,200,0,.25) 48px, rgba(0,200,0,0) 52px);
	background-image: -webkit-linear-gradient(top, rgba(0,200,0,.25) 48px, rgba(0,200,0,0) 52px);
	background-image: -o-linear-gradient(top, rgba(0,200,0,.25) 48px, rgba(0,200,0,0) 52px);
	background-image: -ms-linear-gradient(top, rgba(0,200,0,.25) 48px, rgba(0,200,0,0) 52px);
	background-image: linear-gradient(top, rgba(0,200,0,.25) 48px, rgba(0,200,0,0) 52px);
}
#ctrl_composer_versions .release.stability-stable .version {
	color: rgb(0,200,0);
}
#ctrl_composer_versions .release.stability-rc {
	background-image: -moz-linear-gradient(top, rgba(0,155,255,.25) 48px, rgba(0,155,255,0) 52px);
	background-image: -webkit-linear-gradient(top, rgba(0,155,255,.25) 48px, rgba(0,155,255,0) 52px);
	background-image: -o-linear-gradient(top, rgba(0,155,255,.25) 48px, rgba(0,155,255,0) 52px);
	background-image: -ms-linear-gradient(top, rgba(0,155,255,.25) 48px, rgba(0,155,255,0) 52px);
	background-image: linear-gradient(top, rgba(0,155,255,.25) 48px, rgba(0,155,255,0) 52px);
}
#ctrl_composer_versions .release.stability-rc .version {
	color: rgb(0,155,255);
}
#ctrl_composer_versions .release.stability-beta {
	background-image: -moz-linear-gradient(top, rgba(255,213,0,.25) 48px, rgba(255,213,0,0) 52px);
	background-image: -webkit-linear-gradient(top, rgba(255,213,0,.25) 48px, rgba(255,213,0,0) 52px);
	background-image: -o-linear-gradient(top, rgba(255,213,0,.25) 48px, rgba(255,213,0,0) 52px);
	background-image: -ms-linear-gradient(top, rgba(255,213,0,.25) 48px, rgba(255,213,0,0) 52px);
	background-image: linear-gradient(top, rgba(255,213,0,.25) 48px, rgba(255,213,0,0) 52px);
}
#ctrl_composer_versions .release.stability-beta .version {
	color: rgb(255,213,0);
}
#ctrl_composer_versions .release.stability-alpha {
	background-image: -moz-linear-gradient(top, rgba(255,110,0,.25) 48px, rgba(255,110,0,0) 52px);
	background-image: -webkit-linear-gradient(top, rgba(255,110,0,.25) 48px, rgba(255,110,0,0) 52px);
	background-image: -o-linear-gradient(top, rgba(255,110,0,.25) 48px, rgba(255,110,0,0) 52px);
	background-image: -ms-linear-gradient(top, rgba(255,110,0,.25) 48px, rgba(255,110,0,0) 52px);
	background-image: linear-gradient(top, rgba(255,110,0,.25) 48px, rgba(255,110,0,0) 52px);
}
#ctrl_composer_versions .release.stability-alpha .version {
	color: rgb(255,110,0);
}
#ctrl_composer_versions .release.stability-dev {
	background-image: -moz-linear-gradient(top, rgba(200,200,200,.25) 48px, rgba(200,200,200,0) 52px);
	background-image: -webkit-linear-gradient(top, rgba(200,200,200,.25) 48px, rgba(200,200,200,0) 52px);
	background-image: -o-linear-gradient(top, rgba(200,200,200,.25) 48px, rgba(200,200,200,0) 52px);
	background-image: -ms-linear-gradient(top, rgba(200,200,200,.25) 48px, rgba(200,200,200,0) 52px);
	background-image: linear-gradient(top, rgba(200,200,200,.25) 48px, rgba(200,200,200,0) 52px);
}
#ctrl_composer_versions .release.stability-dev .version {
	color: rgb(200,200,200);
}
#ctrl_composer_versions .release .toggler {
	overflow: hidden;
	cursor: pointer;
}
#ctrl_composer_versions .release .version {
	font-size: 18px;
	line-height: 24px;
}
#ctrl_composer_versions .release .reference {
	margin-left: 18px;
}
#ctrl_composer_versions .release .release-date {
	float: right;
	line-height: 12px;
}
#ctrl_composer_versions .release .license {
	clear: right;
	float: right;
	line-height: 12px;
}
#ctrl_composer_versions .release table {
	width: 100%;
	margin-top: 24px;
}
#ctrl_composer_versions .release td {
	vertical-align: top;
	padding: 0 12px 12px 0;
}
.unknown-license {
	color: red;
}

/**
 * Database update
 */
table#sql_table {
	width: 100%;
}
table#sql_table td {
	padding: 4px;
	vertical-align: top;
}
table#sql_table td.tl_col_1 {
	width: 16px;
}
table#sql_table td.tl_col_2 label {
	font-family: Consolas, monospace;
}
table#sql_table .create_table {
	color: #085AFF;
}
table#sql_table .alter_add {
	color: #085AFF;
}
table#sql_table .alter_drop {
	color: #FF0808;
}
table#sql_table .drop_table {
	color: #FF0808;
}

/**
 * Experts mode
 */
#composer_client_editor_wrapper {
	position: relative;
	margin: 12px 18px;
	border: 1px solid #ccc;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	-o-border-radius: 3px;
	-ms-border-radius: 3px;
	border-radius: 3px;
}
#composer_client_editor {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}
#composer_client_editor div {
	font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
	font-size: 13px;
}

